--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # temporarily exclude datasets combined by class
-/train_imgdata/trueclass_240x240_sortbyclass_full/*/*.png
-/train_imgdata/trueclass_240x240_sortbyclass_actual/*/*.png
-/train_imgdata/trueclass_240x240_sortbyclass_actual - Copy/*/*.png
 
-/test_imgdata/trueclass_240x240_sortbyclass_full/*/*.png
-/test_imgdata/trueclass_240x240_sortbyclass_actual/*/*.png
+/datasets/*/trueclass_240x240_sortbyclass_actual/*/*.png
+/datasets/*/trueclass_240x240_sortbyclass_full/*/*.png
+/datasets/*/trueclass_240x240_subsorted/*/*/*.png
+
+
+# exclude
+
+main_gridified_LOCAL.py
