place reclassified data in _actual2

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # temporarily exclude datasets combined by class
 
 /datasets/*/trueclass_240x240_sortbyclass_actual/*/*.png
+/datasets/*/trueclass_240x240_sortbyclass_actual2/*/*.png
 /datasets/*/trueclass_240x240_sortbyclass_full/*/*.png
 /datasets/*/trueclass_240x240_subsorted/*/*/*.png
 
