exclude dataset folds

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # temporarily exclude datasets combined by class
 
 /datasets/*/trueclass_240x240_sortbyclass_actual/*/*.png
-/datasets/*/trueclass_240x240_sortbyclass_actual2/*/*.png
 /datasets/*/trueclass_240x240_sortbyclass_actual_GROUPS/*/*/*.png
+/datasets/*/trueclass_240x240_sortbyclass_actual_folds/*/*/*/*.png
+/datasets/*/trueclass_240x240_sortbyclass_actual_folds/*/*/*/*/*.png
+/datasets/*/trueclass_240x240_sortbyclass_actual2/*/*.png
 /datasets/*/trueclass_240x240_sortbyclass_full/*/*.png
 /datasets/*/trueclass_240x240_subsorted/*/*/*.png
 
